src/test/ui/consts/issue-64059.rs
fn main() {
    let _ = -(-0.0);
    //~^ ERROR: this expression will panic at runtime
}
